# PeTaL

./: .gitignore  .gitmodules  CNAME  CustomCSS.css  Data exploring.Rmd  Dockerfile  FLOWCHARTS  NetworkC.html  PIPELINE.md  README.md  asset-manifest.json  config.rb  contrails.txt  desktop.ini  docker-compose.yml  global.R  gunicorn.py.ini.bkp  index.html  install  main.py  mkdocs.yml  package-lock.json  package.json  pipeline_requirements.txt  precache-manifest.10f2f03ca20eee12f41a9e6b63a1ea67.js  precache-manifest.4e515ebe26fd4d89a5b18b040dae13f1.js  precache-manifest.5106fc3d7d6a8cebeb4e119c6c25f368.js  precache-manifest.5443b2be0bb899d4dbf9803d8a450009.js  precache-manifest.6281b298cb31024965b6673f20d2af8b.js  precache-manifest.639caa08a94e3742566f9ca0484e9fcc.js  precache-manifest.686bb15f49e09c80602665b9b77bfd35.js  precache-manifest.6970d2ebf0d31fbee0c884570e7ecd8c.js  precache-manifest.edad68a487f3c66ef43731dff151d53b.js  pyproject.toml  req_conda.txt  req_pip.txt  requirements.txt  run  run.bat  search.py  (+5 more)
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
bitflow/: __init__.py  batch.py  driver.py  pipeline.py  scheduler.py
config/: .directory.json.swp  airfoil_training.json  default.json  directory.json  es_search.json  mock_ml_config.json  mock_species_articles.json  normal_catalog.json  search.json  search_articles.json  species_classifier.json
docs/: PIPELINE.md  about.md  index.md
legacy/: IDEs__Tools__and_Libraries.md  README.md  requirements.txt  run.py  setup.py
petal/: ConvertToGeoJSON.py  attributes.py  bird.py  bird_to_biomole.py  graph.py  (+6 more)
(+10446 files in other folders)
