[tool.poetry]
name = "petal"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
neo4j = "^4.0.0"
pandas = "^1.0.5"
nltk = "^3.5"
django = "^3.0.7"
bitflow = "0.0.1"
beautifulsoup4 = "^4.9.1"
gensim = "^3.8.3"
lxml = "^4.5.1"
matplotlib = "^3.2.2"
numpy = "^1.19.0"
Pillow = "^7.1.2"
requests = "^2.24.0"
scholarly = "^0.3.3"
scipy = "^1.5.0"
seaborn = "^0.10.1"
urllib3 = "^1.25.9"
plotly = "^4.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
